Rename because the file extension was wrong

--- a/js/bind_get_element_by_id.html
+++ b/js/bind_get_element_by_id.html
@@ -1,4 +1,4 @@
-<button id=hello>Hello</button>
+<button id="hello">Hello</button>
 <script>
   var el = document.getElementById.bind(document);
   el('hello').onclick = function () {alert('Hello')};
