--- a/js/bind_get_element_by_id.html
+++ b/js/bind_get_element_by_id.html
@@ -1,5 +1,5 @@
 <button id="hello">Hello</button>
 <script>
-  var el = document.getElementById.bind(document);
+  const el = document.getElementById.bind(document);
   el('hello').onclick = function () {alert('Hello')};
 </script>
