Better styling for the companion website

--- a/index.html
+++ b/index.html
@@ -40,7 +40,15 @@
         color: #4b2538;
         margin-top: 1.5em;
         font-weight: bold;
-        font-size: 1.5em;
+        font-size: 1.75em;
+      }
+      dt {
+        margin-top: 10px;
+        font-weight: bold;
+        color: #600;
+      }
+      dd {
+        font-style: italic;
       }
       ul li {
         color: #a20841;
@@ -118,65 +126,77 @@
       </div>
 
       <p class="summary">This text covers all the usual programming language
-      concepts, including binding, scope, parameterization, modularity, concurrency,
-      and meta&shy;programming, not with a dry summary of each concept, but rather
+      concepts, including binding, scope, typing, parameterization, modularity, concurrency,
+      and meta&shy;programming, not via a dry summary of each concept, but rather
       within the context of whole-language overviews with plenty of runnable
       example scripts. We aim to help developers learn a bit of theory, and
-      introduce students to a number of modern languages. Check out the
-      <a href="https://github.com/rtoal/ple">source code</a> for the examples
-      given in the book.</p>
+      introduce students to a number of modern languages. All of the source
+      code for the book&rsquo;s examples, as well as number of bonus scripts,
+      can be found in <a href="https://github.com/rtoal/ple">this GitHub
+      repository</a>.</p>
 
       <div class="sectionheading">Brief Contents</div>
-      <ol>
-        <li value="0">Introduction
-          &mdash; <i>where we explain why the study of languages is fun and give you a hint of what&rsquo;s coming</i>
-        <li value="1">JavaScript
-        <li value="2">CoffeeScript
-        <li value="3">Lua
-        <li value="4">Python
-        <li value="5">Ruby
-        <li value="6">Julia
-        <li value="7">Java
-        <li value="8">Clojure
-        <li value="9">Elm
-        <li value="10">Erlang
-        <li value="11">Go
-        <li value="12">Swift
-        <li value="13">Additional Languages
-          &mdash; <i>where we mention and sometimes provide examples for Fortran,
-          COBOL, Lisp, Algol, Simula, Smalltalk, C, C++, Rust, CLU, Ada, C#,
-          Scala, Bash, Perl, Standard ML, OCaml, Haskell, F#, Idris, ParaSail,
-          Chapel, Elixir, PHP, Hack, TypeScript, Dart, APL, Prolog, K, Io, Factor,
-          Brainfuck, Befunge, LOLCODE, and nasm</i>
-        <li value="14">Afterword
-          &mdash; <i>where we review language concepts in a Socratic fashion</i>
-        <li value="1" type="A">Numbers
-          &mdash; <i>where we five encodings of fixed-size integers and IEEE
-          754 floating point</i>
-        <li value="2" type="A">Text
-          &mdash; <i>where we summarize what you need to know about Unicode,
-          and a little more</i>
-      </ol>
+      <dl>
+        <dt>Chapter 0 Introduction
+        <dd>A little on why the study of languages is fun and some hints about
+        what&rsquo;s coming up in the rest of the book
+        <dt>Chapter 1 JavaScript
+        <dd>where we
+        <dt>Chapter 2 CoffeeScript
+        <dd>where we
+        <dt>Chapter 3 Lua
+        <dd>where we
+        <dt>Chapter 4 Python
+        <dd>where we
+        <dt>Chapter 5 Ruby
+        <dd>where we
+        <dt>Chapter 6 Julia
+        <dd>where we
+        <dt>Chapter 7 Java
+        <dd>where we
+        <dt>Chapter 8 Clojure
+        <dd>where we
+        <dt>Chapter 9 Elm
+        <dd>where we
+        <dt>Chapter 10 Erlang
+        <dd>where we
+        <dt>Chapter 11 Go
+        <dd>where we
+        <dt>Chapter 12 Swift
+        <dd>where we
+        <dt>Chapter 13 Additional Languages
+        <dd>Brief looks at Fortran, COBOL, Lisp, Algol, Simula, Smalltalk, C,
+        C++, Rust, CLU, Ada, C#, Scala, Bash, Perl, Standard ML, OCaml, Haskell,
+        F#, Idris, ParaSail, Chapel, Elixir, PHP, Hack, TypeScript, Dart, APL,
+        Prolog, K, Io, Factor, Brainfuck, Befunge, LOLCODE, and nasm
+        <dt>Chapter 14 Afterword
+        <dd>A review of language concepts in a Socratic fashion
+        <dt>Appendix A Numbers
+        <dd>Encodings of fixed-size integers and IEEE-754 floating point numbers
+        <dt>Appendix B Text
+        <dd>All you need to know about Unicode, and a little bit more
+     </dl>
 
-      <div class="sectionheading">Source Code</div>
+      <div class="sectionheading">Additional Resources</div>
 
-      <p>All of the source code from the book, as well as dozens of other sample
-      programs, can be found in <a href="https://github.com/rtoal/ple">this
-      GitHub repository</a>. The repo contains pointers to additional resources
-      for each of the programming languages covered.</p>
+      <p>We&rsquo;ve put all of our examples, and unit tests galore, on
+      <a href="https://github.com/rtoal/ple">GitHub</a>, of course.
+      The repo contains pointers to additional resources for each of the
+      programming languages covered. See something wrong or want to
+      add anything? Send us a pull request.</p>
 
       <div class="sectionheading">Errata</div>
 
-      <p>Nothing found yet, but please let us know if you find anything.
+      <p>Please let us know if you find anything.
       Email one of the authors or submit a pull request for this file.</p>
 
       <div class="sectionheading">Additional Exercises</div>
 
-      <p>The text features 300 exercies, most of which are &ldquo;further
+      <p>The text features 300 exercises, most of which are &ldquo;further
       explorations&rdquo; in which you find or install a language interpreter,
       investigate aspects of the language not covered in the chapter proper,
       muse about language designers&rsquo; intents, and try your hand at
-      both large and small programming exercises. If you would like to contribute
+      both large and small programming tasks. If you would like to contribute
       additional exercises, submit a pull request for this file.
     </div>
   </body>
