More work on the chapter summaries

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
         <dt>Chapter 4 Python
         <dd>Our first language with a sophisticated type system, where types
-        are objects within the language, and in which the programmer can
+        are objects within the language, and the programmer can
         define new types. This chapter introduces supertype-subtype
         relationships, multiple inheritance, keyword arguments,
         pass-by-sharing, special methods, iterators and generators,
@@ -194,13 +194,25 @@
         metaprogramming capabilities.
 
         <dt>Chapter 6 Julia
-        <dd>TODO
+        <dd>A tour of the new dynamic language for scientific computing where
+        we encounter abstract types, parametric types, sum and product types,
+        and the notions of covariance, contravariance, and invariance. We see
+        polymorphism with multiple dispatch, a metaprogramming facility with
+        hygienic macros, and language support for parallel and distributed
+        computing.
 
         <dt>Chapter 7 Java
-        <dd>Our first statically-typed language TODO
+        <dd>An exploration of our first statically-typed language with coverage
+        of classes, modifiers, interfaces, generics, optionals, reflection,
+        and quite a lot about threads.
 
         <dt>Chapter 8 Clojure
-        <dd>TODO
+        <dd>A tour of the mostly-functional language known as a Lisp for
+        the JVM. We look at its interesting syntax, its rich set of data
+        types, and namespaces; then introduce persistent data structures,
+        transients, software transactional memory, and agents. We look at
+        two approaches to the expression problem and discuss how Clojure&rsquo;s
+        hygienic macros compare to Julia&rsquo;s.
 
         <dt>Chapter 9 Elm
         <dd>TODO
@@ -236,9 +248,9 @@
 
       <div class="sectionheading">Good to Know</div>
 
-      <p>This book is not for beginning programmers. We assume you
-      know at least two languages pretty well, and hopefully a couple more.
-      You should know the basic concepts surrounding variables, expressions,
+      <p>Some prerequisites: This book is not for beginning programmers. We
+      assume you know at least two languages pretty well, and hopefully a couple
+      more. You should know the basic concepts surrounding variables, expressions,
       operators, functions, and basic data structures, and have experience
       writing nontrivial applications&mdash;this book is a <em>tour</em>, not a
       <em>tutorial</em>. We cover many interesting (and often powerful) features,
@@ -248,8 +260,7 @@
 
       <p>Most of the code examples are written as their own unit tests,
       which should help you learn the concepts as you read the code itself.
-      We favor this style over excessive comments, which, you know, can become
-      stale and misleading.
+      We favor this style over excessive commenting.
       <a href="http://www.kyleblaney.com/software-blog/2012/6/29/comments-are-a-failure.html">Uncle
       Bob tells us why comments are not &ldquo;pure good.&rdquo;</a></p>
 
@@ -272,48 +283,48 @@
       <div class="sectionheading">Additional Exercises</div>
 
       <p>The text features 300 exercises, most of which are &ldquo;further
-      explorations&rdquo; in which you find or install a language interpreter,
-      investigate aspects of the language not covered in the chapter proper,
+      explorations&rdquo; in which you find or install compilers or interpreters,
+      investigate aspects of a language not covered in the chapter proper,
       muse about language designers&rsquo; intents, and try your hand at
       both large and small programming tasks. If you would like to contribute
       additional exercises, submit a pull request for this file.
 
 
       <div id="bottomline">
-        <img src="resources/ada-logo-24.png">
-        <img src="resources/apl-logo-24.png">
-        <img src="resources/bash-logo-24.png">
-        <img src="resources/c-logo-24.png">
-        <img src="resources/ceylon-logo-24.png">
-        <img src="resources/chapel-logo-24.png">
-        <img src="resources/clojure-logo-24.png">
-        <img src="resources/coffeescript-logo-24.png">
-        <img src="resources/dart-logo-24.png">
-        <img src="resources/elixir-logo-24.png">
-        <img src="resources/elm-logo-24.png">
-        <img src="resources/erlang-logo-24.png">
-        <img src="resources/fsharp-logo-24.png">
-        <img src="resources/go-logo-24.png">
-        <img src="resources/haskell-logo-24.png">
-        <img src="resources/java-logo-24.png">
-        <img src="resources/javascript-logo-24.png">
-        <img src="resources/julia-logo-24.png">
-        <img src="resources/k-logo-24.png">
-        <img src="resources/kotlin-logo-24.png">
-        <img src="resources/lolcode-logo-24.png">
-        <img src="resources/lua-logo-24.png">
-        <img src="resources/nasm-logo-24.png">
-        <img src="resources/nim-logo-24.png">
-        <img src="resources/ocaml-logo-24.png">
-        <img src="resources/perl-logo-24.png">
-        <img src="resources/python-logo-24.png">
-        <img src="resources/r-logo-24.png">
-        <img src="resources/ruby-logo-24.png">
-        <img src="resources/rust-logo-24.png">
-        <img src="resources/scala-logo-24.png">
-        <img src="resources/smalltalk-logo-24.png">
-        <img src="resources/sml-logo-24.png">
-        <img src="resources/swift-logo-24.png">
+        <img src="resources/ada-logo-24.png" title="Ada">
+        <img src="resources/apl-logo-24.png" title="APL">
+        <img src="resources/bash-logo-24.png" title="Bash">
+        <img src="resources/c-logo-24.png" title="C">
+        <img src="resources/ceylon-logo-24.png" title="Ceylon">
+        <img src="resources/chapel-logo-24.png" title="Chapel">
+        <img src="resources/clojure-logo-24.png" title="Clojure">
+        <img src="resources/coffeescript-logo-24.png" title="CoffeeScript">
+        <img src="resources/dart-logo-24.png" title="Dart">
+        <img src="resources/elixir-logo-24.png" title="Elixir">
+        <img src="resources/elm-logo-24.png" title="Elm">
+        <img src="resources/erlang-logo-24.png" title="Erlang">
+        <img src="resources/fsharp-logo-24.png" title="F#">
+        <img src="resources/go-logo-24.png" title="Go">
+        <img src="resources/haskell-logo-24.png" title="Haskell">
+        <img src="resources/java-logo-24.png" title="Java">
+        <img src="resources/javascript-logo-24.png" title="JavaScript">
+        <img src="resources/julia-logo-24.png" title="Julia">
+        <img src="resources/k-logo-24.png" title="K">
+        <img src="resources/kotlin-logo-24.png" title="Kotlin">
+        <img src="resources/lolcode-logo-24.png" title="LOLCODE">
+        <img src="resources/lua-logo-24.png" title="Lua">
+        <img src="resources/nasm-logo-24.png" title="nasm">
+        <img src="resources/nim-logo-24.png" title="Nim">
+        <img src="resources/ocaml-logo-24.png" title="OCaml">
+        <img src="resources/perl-logo-24.png" title="Perl">
+        <img src="resources/python-logo-24.png" title="Python">
+        <img src="resources/r-logo-24.png" title="R">
+        <img src="resources/ruby-logo-24.png" title="Ruby">
+        <img src="resources/rust-logo-24.png" title="Rust">
+        <img src="resources/scala-logo-24.png" title="Scala">
+        <img src="resources/smalltalk-logo-24.png" title="Smalltalk">
+        <img src="resources/sml-logo-24.png" title="Standard ML">
+        <img src="resources/swift-logo-24.png" title="Swift">
       </div>
     </div>
   </body>
